[package]
name = "rusty-structures"
authors = ["Batuhan Aydın <batuhanaydin501@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/batuhan-aydin/rusty-structures"
homepage = "https://github.com/batuhan-aydin/rusty-structures"
description = """
An experimental data structures and algorithms library.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const-fnv1a-hash = "1.1.0"
fastmurmur3 = "0.1.2"
rand = "0.8.5"
evalexpr = "8.1.0"