[package]
name = "quotient-filter"
version = "0.1.0"
edition = "2021"
authors = ["Batuhan Aydın <batuhanaydin501@gmail.com>"]
description = "A quotient filter implementation."
repository = "https://github.com/batuhan-aydin/rusty-structures/tree/main/quotient-filter"
documentation = "https://docs.rs/quotient-filter"
readme = "README.md"
keywords = ["quotient", "filter", "hash"]
categories = ["data-structures", "algorithms"]
license = "MIT"
license-file = "LICENSE"

[dependencies]
anyhow = "^1.0.66"
thiserror = "^1.0.37"
const-fnv1a-hash = "^1.1.0"
num-traits = "^0.2.15"