[package]
name = "quotient-filter"
version = "0.2.4"
edition = "2021"
authors = ["Batuhan Aydın <batuhanaydin501@gmail.com>"]
description = "A quotient filter implementation."
repository = "https://github.com/batuhan-aydin/rusty-structures/tree/main/quotient-filter"
documentation = "https://docs.rs/quotient-filter"
readme = "README.md"
keywords = ["quotient", "filter", "hash"]
categories = ["data-structures", "algorithms"]
license = "MIT"
license-file = "LICENSE"

[dependencies]
anyhow = "^1.0.72"
thiserror = "^1.0.44"
const-fnv1a-hash = "^1.1.0"
const-murmur3 = "^0.2.1"
num-traits = "^0.2.16"